--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -18,7 +18,7 @@ h2 {
 }
 
 li a {
-    font-size: 1rem;
+    font-size: 1.25rem;
     font-weight: 300;
 }
 
@@ -44,7 +44,7 @@ small.description {
     color: rgba(0, 0, 0, 0.6);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
     li a {
         font-size: min(1.6vw, 2.2vh);
     }
