--- a/src/styles/widget.css
+++ b/src/styles/widget.css
@@ -7,7 +7,7 @@
   stroke: rgba(0, 0, 0, 0.5);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 1280px) {
   .icon-button {
     width: min(1.8vw, 2.4vh);
     height: min(1.8vw, 2.4vh);
